# rust-fortunes

./: Cargo.toml  Dockerfile  Makefile  README.md  fortunes.txt
.devcontainer/: devcontainer.json
.github/workflows/: dockerize.yaml
src/: fortunes.rs  main.rs
